# invictus-os

./: .gitignore  README.md  RUNNING.md  vercel.json
agents/: orchestrator-agent.md
assets/: brand-system.md
backend/: .env.example  pyproject.toml
backend/api/: index.py
backend/src/: __init__.py
backend/src/invictus_os/: __init__.py
backend/src/invictus_os/agents/: __init__.py  orchestrator.py  registry.py
backend/src/invictus_os/api/: app.py  routes.py
backend/src/invictus_os/config/: settings.py
backend/src/invictus_os/core/: __init__.py  ports.py
backend/src/invictus_os/models/: agent.py  workflow.py
backend/src/invictus_os/schemas/: agent.py  canva.py  content.py  design.py  reel.py  schedule.py  settings.py
backend/src/invictus_os/services/: __init__.py  agent_service.py  canva_design.py  content_generator.py  design_service.py  openai_service.py  reel_service.py  schedule_service.py  settings_service.py  video_service.py
backend/src/invictus_os/utilities/: logging.py
backend/src/invictus_os/workflows/: engine.py
backend/tests/: test_agents.py  test_app.py  test_canva_design.py  test_content_generator.py  test_design_service.py  test_openai_service.py  test_reel_service.py  test_schedule_service.py  test_settings_service.py  test_video_service.py
config/: settings.example.toml
docs/: architecture.md  vercel-deployment.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/hooks/: useAgents.ts
prompts/: system-principles.md
workflows/: agent-intake.yaml
(+28 files in other folders)
